--- a/.github/workflows/tester.yml
+++ b/.github/workflows/tester.yml
@@ -17,7 +17,7 @@ jobs:
           aws-region: ap-northeast-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          instance-ids: ${{ secrets.INSTANCE_ID }}
+          targets: ${{ secrets.TARGETS }}
           comment: aws-ssm-send-command testing
           working-directory: /home/ubuntu/
           command: echo $(date) >> logs.txt
